// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
  output   = "../generated/prisma"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id        Int      @id @default(autoincrement())
  name      String
  email     String   @unique
  password  String
  active    Boolean  @default(true)
  shapes    Shape[]
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Role {
  id          Int         @id @default(autoincrement())
  name        String      @unique
  description String
  createdAt   DateTime    @default(now())
  updatedAt   DateTime    @updatedAt
  scopes      RoleScope[]
}

model Scope {
  id          Int         @id @default(autoincrement())
  name        String      @unique
  description String
  createdAt   DateTime    @default(now())
  updatedAt   DateTime    @updatedAt
  roles       RoleScope[]
}

model RoleScope {
  roleId  Int
  scopeId Int
  Role    Role  @relation(fields: [roleId], references: [id], onDelete: Cascade)
  Scope   Scope @relation(fields: [scopeId], references: [id], onDelete: Cascade)

  @@id([roleId, scopeId])
}

model Shape {
  id        Int      @id @default(autoincrement())
  name      String   @unique
  owner     User     @relation(fields: [ownerId], references: [id], onDelete: Cascade)
  ownerId   Int
  spaces    Space[]
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Space {
  id        Int      @id @default(autoincrement())
  name      String
  shape     Shape    @relation(fields: [shapeId], references: [id], onDelete: Cascade)
  shapeId   Int
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}
